# email-view-tracker

./: .gitignore  Cargo.toml  README.md  build.rs  deny.toml  docker-compose.yml  rust-toolchain.toml  shell.nix
.github/: dependabot.yml  labeler.yml
.github/workflows/: cargo-deny.yml  ci.yml  licensing.yml  pr-label.yml
entity/: Cargo.toml
entity/src/: tracker.rs  user.rs
licensing/: about.hbs  about.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20221127_000001_create_users.rs  m20221127_000002_create_trackers.rs
packaging/docker/: Dockerfile  copy-binary.sh
src/: main.rs
src/assets/: login.css  shared.css  user.css
src/database/: access.rs  connection.rs  migrate.rs  mod.rs
src/model/: asset.rs  cli.rs  config.rs  database.rs  mod.rs
src/models/: cli.rs  config.rs
src/schema/: tables.sql
src/server/: mod.rs  serve.rs
src/server/lib/: csrf.rs  header.rs  ip_session.rs  macros.rs  mod.rs
src/server/model/: mod.rs  tracker_paginator.rs
src/server/route/: home.rs  login.rs  logout.rs  mod.rs  not_found.rs  profile.rs  shared.rs  tracker.rs
src/server/template/: base.rs  header.rs  home.rs  login.rs  mod.rs  profile.rs  shared.rs  tracker.rs
src/service/: database.rs
src/utility/: mod.rs  password.rs  tracker.rs  user.rs
