[package]
name = "email-view-tracker"
version = "0.1.21"
edition = "2021"
license = "AGPL-3.0"
publish = false

[profile.release]
codegen-units = 1
lto = true

[workspace]
members = [
    ".",
    "entity",
    "migration"
]

[dependencies]
actix-identity = "=0.8.0"
entity = { path = "entity" }
fern = "=0.7.1"
getrandom = "=0.3.1"
hex = "=0.4.3"
log = "=0.4.25"
markup = { git = "https://github.com/utkarshkukreti/markup.rs", rev = "c1dc693e0d3e312d52160c312961bf47f1cffbf7" }
migration = { path = "migration" }
once_cell = "=1.20.2"
serde = "=1.0.217"
thiserror = "=2.0.11"
time = "=0.3.37"
url = "=2.5.4"

[dependencies.actix-web]
version = "=4.9.0"
default-features = false
features = ["compress-brotli", "compress-gzip", "compress-zstd", "macros"]

[dependencies.actix-session]
version = "=0.10.1"
features = ["cookie-session"]

[dependencies.clap]
version = "=4.5.30"
default-features = false
features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "env", "cargo"]

[dependencies.uuid]
version = "=1.12.1"
default-features = false
features = ["v4"]

[dependencies.sea-orm]
version = "=1.1.4"
default-features = false
features = ["sqlx-mysql", "sqlx-postgres", "runtime-actix-rustls"]

[dependencies.argon2]
version = "=0.5.3"
default-features = false
features = ["std", "password-hash"]

[dependencies.mini-moka]
version = "=0.10.3"
default-features = false
features = ["sync"]

[build-dependencies]
lightningcss = "=1.0.0-alpha.63"
proc-macro2 = "=1.0.93"
quote = "=1.0.38"
time = { version = "=0.3.37", features = ["macros", "formatting"] }
