[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies.serde]
version = "=1.0.205"
default-features = false
features = ["derive"]

[dependencies.sea-orm]
version = "=1.0.0"
default-features = false
features = ["macros", "with-time", "with-uuid"]

[dependencies.uuid]
version = "=1.10.0"
default-features = false
features = ["v4", "serde"]

[dependencies.time]
version = "=0.3.36"
default-features = false
features = ["std", "serde"]
