[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies.serde]
version = "=1.0.217"
default-features = false
features = ["derive"]

[dependencies.sea-orm]
version = "=1.1.4"
default-features = false
features = ["macros", "with-time", "with-uuid"]

[dependencies.uuid]
version = "=1.13.1"
default-features = false
features = ["v4", "serde"]

[dependencies.time]
version = "=0.3.37"
default-features = false
features = ["std", "serde"]
