[package]
name = "entity"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies.serde]
version = "=1.0.218"
default-features = false
features = ["derive"]

[dependencies.sea-orm]
version = "=1.1.5"
default-features = false
features = ["macros", "with-time", "with-uuid"]

[dependencies.uuid]
version = "=1.15.1"
default-features = false
features = ["v4", "serde"]

[dependencies.time]
version = "=0.3.37"
default-features = false
features = ["std", "serde"]
